# libexpressions

./: CMakeLists.txt  LICENSE
evaluators/: CMakeLists.txt  evaluator.hpp
expressions/: CMakeLists.txt  atom.hpp  expression_factory.hpp  expression_node.cpp  expression_node.hpp  expression_node_kind.hpp  expression_replacement.hpp  expression_visit_helper.hpp  expression_visitor.hpp  operator.hpp
iht/: CMakeLists.txt  iht_factory.hpp  iht_node.hpp  iht_node_type_visitor.hpp
matchers/: CMakeLists.txt  hierarchyMatchers.cpp  hierarchyMatchers.hpp  matcherConnectives.cpp  matcherConnectives.hpp  matchers.cpp  matchers.hpp
matchers/expressions/: CMakeLists.txt  PredicateMatcher.hpp
parsers/: ASTConversion.cpp  ASTConversion.hpp  CMakeLists.txt  ExpressionRepresentationInterface.hpp  ast.hpp  s-expression-parser.cpp  s-expression-parser.hpp  s-expression-parser.l  s-expression-parser.y
parsers/s-expressions/: CMakeLists.txt  interface.cpp  interface.hpp  s-expression-generator.hpp  s-expression-parser.hpp  s-expression-parser.l  s-expression-parser.lex.cpp  s-expression-parser.lex.hpp  s-expression-parser.tab.cpp  s-expression-parser.tab.hpp  s-expression-parser.y
utils/: CMakeLists.txt  expression-tree-visit.cpp  expression-tree-visit.hpp  path_trie.hpp  tree-visit.hpp  trie_node.hpp  variadic-insert.hpp  variadic_type_helper.hpp  version.hpp
